--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -27,6 +27,13 @@
     flex-direction: row;
     padding: 10px 20px;
 }
+.footer_logo_and_subscribe{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
 .footer_column{
     width: 33.3%;
     display: flex;
@@ -36,10 +43,15 @@
     width: 8%;
     min-width: 100px;
     user-select: none;
-    margin: 20px 0px 0px 20px;
+    /* margin: 20px 0px 0px 20px; */
 }
 .footer_logo img{
     width: 100%;
+}
+.footer_subscribe_form{
+    width: 25%;
+    min-width: 260px;
+    margin-right: 5%;
 }
 @keyframes progress{
     0%{
@@ -142,6 +154,16 @@
     font-size: 13px;
 }
 @media (width <= 600px){
+    .footer_logo_and_subscribe{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .footer_subscribe_form{
+        width: 100%;
+        max-width: 300px;
+        margin-top: 20px;
+        min-width: unset;
+    }
     .desktop_footer_columns{
         flex-direction: column;
     }
