--- a/src/components/page_top_btn/page_top_btn.css
+++ b/src/components/page_top_btn/page_top_btn.css
@@ -1,6 +1,7 @@
 :root{
     --primary-color: #fff;
     --secondary-color: #40cb00;
+    --top-btn-hover: #3dbf00;
     --tertiary-color: #2a8301;
     --quaternary-color: #45A6FF;
 }
@@ -25,6 +26,7 @@
 }
 .page_top_button:hover{
     transform: scale(1.15);
+    background-color: var(--top-btn-hover);
 }
 .page_top_button_none{
     display: none;
