--- a/src/components/forgot_password_form/forgot_password_form.css
+++ b/src/components/forgot_password_form/forgot_password_form.css
@@ -29,9 +29,10 @@
     z-index: 10;
     top: 0px;
     background-color: var(--primary-color);
-    -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
+    /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
-    box-shadow: 0px 2px 5px 0px var(--secondary-color);
+    box-shadow: 0px 2px 5px 0px var(--secondary-color); */
+    border: 3px solid var(--secondary-color);
     border-radius: 10px;
     padding: 20px;    
 }
@@ -43,17 +44,22 @@
 }
 /* close button */
 .forgot_password_form_window_close{
+    width: 20%;
+    min-width: 60px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;   
     margin-bottom: 20px; 
-}
-.forgot_password_form_window_close svg{
-    font-size: 30px;
+    align-items: center;
+    font-size: 18px;
     color: var(--quaternary-color);
     cursor: pointer;
 }
-.forgot_password_form_window_close svg:hover{
+.forgot_password_form_window_close svg{
+    font-size: 30px;        
+    margin-right: 5px;
+}
+.forgot_password_form_window_close:hover svg{
     transform: scale(1.1);
 }
 /* form info */
@@ -100,4 +106,11 @@
     text-align: center;
     user-select: none;
     cursor: pointer;
+}
+@media (width <= 500px){
+    .forgot_password_form_submit{
+        width: 100%;
+        min-width: unset;
+        font-size: 16px;
+    }
 }
