--- a/src/components/update_password_form/update_password_form.css
+++ b/src/components/update_password_form/update_password_form.css
@@ -23,14 +23,15 @@
 }
 .update_password_form_container{
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
-    z-index: 11;
+    z-index: 12;
     top: 0px;
     background-color: var(--primary-color);
-    -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
+    /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
-    box-shadow: 0px 2px 5px 0px var(--secondary-color);
+    box-shadow: 0px 2px 5px 0px var(--secondary-color); */
+    border: 3px solid var(--secondary-color);
     border-radius: 10px;
     padding: 20px;    
 }
@@ -65,4 +66,11 @@
     text-align: center;
     user-select: none;
     cursor: pointer;
+}
+@media (width <= 500px){
+    .update_password_form_submit{
+        width: 100%;
+        min-width: unset;
+        font-size: 16px;
+    }
 }
