signup is ready

--- a/src/components/forgot_password_form/forgot_password_form.css
+++ b/src/components/forgot_password_form/forgot_password_form.css
@@ -48,12 +48,13 @@
     min-width: 60px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;   
+    justify-content: flex-start;   
     margin-bottom: 20px; 
     align-items: center;
     font-size: 18px;
     color: var(--quaternary-color);
     cursor: pointer;
+    user-select: none;
 }
 .forgot_password_form_window_close svg{
     font-size: 30px;        
