--- a/src/components/login_form/login_form.css
+++ b/src/components/login_form/login_form.css
@@ -103,6 +103,7 @@
     margin: 50px auto 0px;
     font-size: 15px;
     text-align: center;
+    font-weight: 500;
 }
 .login_form_link_to_signUp{
     color: var(--quaternary-color);
