vakansiyalar hazir deyil

--- a/src/components/sendOtpForm/sendOtpForm.css
+++ b/src/components/sendOtpForm/sendOtpForm.css
@@ -75,14 +75,33 @@
 .count_Down_Otp{
     font-size: 15px;
     text-align: center;
-    color: var(--quaternary-color);
+    color: red;
     font-weight: 500;
 }
-.send_top_form_submit{
+.send_otp_again_btn{
+    width: 40%;
+    min-width: 100px;
+    display: block;
+    margin: 20px auto 0px;
+    background-color: var(--quaternary-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    user-select: none;
+}
+.send_otp_form_submit_btn_container{
     width: 50%;
     min-width: 130px;
-    display: block;
     margin: 40px auto 0px;
+    position: relative;
+}
+.send_otp_form_submit{
+    width: 100%;
+    display: block;    
     font-size: 18px;
     outline: none;
     border: none;
@@ -93,12 +112,36 @@
     text-align: center;
     user-select: none;
     cursor: pointer;
+    opacity: 0.5;
+}
+.send_otp_form_submit_ready{
+    opacity: 1;
+}
+
+/* loading animation on form submit button */
+.send_otp_form_submit_btn_loader{
+    position: absolute;
+    top: 11px;
+    left: 30px;
+    width: 20px;
+    height: 20px;
+    z-index: 1;
+    border-top: 2px solid var(--primary-color);
+    border-right: 2px solid var(--primary-color);
+    border-bottom: 2px solid var(--primary-color);
+    border-left: 2px solid var(--secondary-color);
+    border-radius: 50%;
+    animation: form_submit_spinner 1s linear infinite;
+}
+@keyframes form_submit_spinner{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
 }
 @media (width <= 500px){
     .send_top_form_container{
         padding: 10px;
     }
-    .send_top_form_submit{
+    .send_otp_form_submit{
         width: 100%;
         font-size: 16px;
     }
