vacancies page is ready for responsivness

--- a/src/components/post_box/post_box.css
+++ b/src/components/post_box/post_box.css
@@ -193,6 +193,16 @@
 }
 /* ______________ responsive _______________ */
 @media (width <= 650px){
+    .post_box_job_title, .post_box_job_salary{
+        font-size: 18px;
+    }
+}
+@media (width <= 550px){
+    .post_box_container{
+        width: 80%;
+        margin: 0px auto 15px;
+        padding: 10px
+    }
     .post_box_company_logo{
         width: 35px;
         height: 35px;
@@ -205,10 +215,10 @@
     .post_box_job_title{
         margin-right: unset;
         margin-bottom: 10px;
-        font-size: 20px;
+        font-size: 18px;
     }
     .post_box_job_salary{
-        font-size: 20px;
+        font-size: 18px;
     }
     .job_location_and_time_type{
         justify-content: center;
@@ -228,5 +238,10 @@
     .post_box_details_btn{
         width: 60%;
         text-align: center;
+    }
+}
+@media (width <= 360px){
+    .post_box_container{
+        width: 100%;
     }
 }
