link logo is added

--- a/src/pages/post_Detail/post_detail.css
+++ b/src/pages/post_Detail/post_detail.css
@@ -283,7 +283,7 @@
 /* relevant vacancies */
 .detail_page_relevant_vacancies{
     width: 60%;
-    margin: 0px auto;
+    margin: 0px auto 50px;
 }
 .detail_page_vacancy_buttons_mobile{
     display: none;
