companies page is ready fully

--- a/src/components/page_head_text/page_head_text.css
+++ b/src/components/page_head_text/page_head_text.css
@@ -15,6 +15,7 @@
     color: var(--primary-color);
     user-select: none;
     letter-spacing: 5px;
+    text-transform: uppercase;
 }
 @media (width <= 400px){
     .page_head_text_container{
