--- a/src/components/post_box/post_box.css
+++ b/src/components/post_box/post_box.css
@@ -19,6 +19,14 @@
     padding: 15px;
     transition: 0.5s all;
     user-select: none;
+    position: relative;
+}
+.post_box_link{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 }
 .post_box_container:hover{
     transform: scale(1.01);
@@ -39,6 +47,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
+    z-index: 10;
 }
 /* company logo */
 .post_box_company_logo{
@@ -200,7 +210,7 @@
 }
 @media (width <= 550px){
     .post_box_container{
-        width: 80%;
+        width: 100%;
         margin: 0px auto 15px;
         padding: 10px
     }
@@ -241,8 +251,8 @@
         text-align: center;
     }
 }
-@media (width <= 360px){
-    .post_box_container{
+@media (width <= 400px){
+    .post_box_details_btn{
         width: 100%;
     }
 }
