--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -37,14 +37,16 @@
     user-select: none;
 }
 .home_slider_slogan_text{
-    width: 50%;
-    font-size: 40px;
+    width: 80%;
+    font-size: 30px;
     color: white;
+    text-transform: uppercase;
+    text-align: center;
 }
-@media (width <= 1100px){
+@media (width <= 1220px){
     .home_slider_slogan_text{
-        width: 60%;
-        font-size: 40px;
+        width: 80%;
+        font-size: 30px;
     }
 }
 @media (width <= 822px){
@@ -53,15 +55,15 @@
         font-size: 30px;
     }
 }
-@media (width <= 500px){
+@media (width <= 600px){
     .home_slider_slogan_text{
-        width: 80%;
-        font-size: 20px;
+        width: 90%;
+        font-size: 18px;
     }
 }
 @media (width <= 350px){
     .home_slider_slogan_text{
-        width: 85%;
+        width: 90%;
         font-size: 15px;
     }
 }
