--- a/src/components/apply_form_detailPage/apply_form_detailP.css
+++ b/src/components/apply_form_detailPage/apply_form_detailP.css
@@ -1,3 +1,27 @@
+:root{
+    --primary-color: #fff;
+    --secondary-color: #40cb00;
+    --tertiary-color: #2a8301;
+    --quaternary-color: #45A6FF;
+    --posts-container-heading-color: var(--secondary-color);
+    --detail-page-header: #F0FFF6;
+    --post-box-detail-btn-hover: #3dbf00;
+    --submit-btn-color: #7CF281;
+}
+@keyframes window_Top_To_Bottom{
+    from{
+        top: -100%;
+        opacity: 0.5;
+        left: -100%;
+        border-radius: 100%;
+    }
+    to{
+        top:0%;
+        opacity: 1;
+        left: 0%;
+        border-radius: 0%;
+    }
+}
 .apply_form_detail_page{
     position: fixed;
     top: 0px;
@@ -6,42 +30,119 @@
     width: 100%;
     height: 100vh;
     background-color: rgb(0,0,0, 0.4);
-    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: window_Top_To_Bottom 0.9s;
+}
+.apply_form_detail_page_container{
+    width: 95%;
+    max-width: 400px;
+    background-color: var(--primary-color);
+    /* padding: 20px; */
+    border-radius: 10px;
+    position: relative;
+    z-index: 1000;
+    /* overflow: hidden; */
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+}
+.apply_form_detail_page_heading{
+    width: 100%;
+    padding: 10px;
+    background-color: var(--quaternary-color);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: var(--primary-color);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+/* apply window close button */
+.apply_form_detail_page_close_btn{
+    display: inline-block;
+    padding: 5px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+.apply_form_detail_page_close_btn svg{
+    font-size: 30px;
+    transition: 0.3s all;
+}
+.apply_form_detail_page_close_btn:hover svg{
+    transform: scale(1.3) rotate(90deg);
+}
+.apply_form_detail_page_head_text{
+    font-size: 20px;
+    text-align: center;
+}
+.apply_form_detail_page_body{
+    width: 100%;
+    padding: 10px 20px;
+}
+.apply_form_checkbox_and_text{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px 0px;
+}
+.apply_form_checkbox{
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+    border: 2px solid black;
+    border-radius: 3px;
+    position: relative;
+    cursor: pointer;
+}
+.apply_form_checkbox_accepted{
+    border: 2px solid var(--secondary-color);
+    /* background-color: var(--secondary-color); */
+}
+.apply_form_checkbox_checkmark::after{
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 6px;
+    width: 6px;
+    height: 13px;
+    border-bottom: 3px solid var(--secondary-color);
+    border-right: 3px solid var(--secondary-color);
+    transform: rotate(45deg);
 }
 /* logo file input label */
 .company_signup_form_logo{
     width: unset;
     display: unset;
 }
-.company_signup_form_logo_and_name{
+.apply_form_detailP_CV_choose_and_name{
     width: 100%;
+    /* max-width: 300px; */
     display: flex;
     flex-direction: row;
     align-items: baseline;
     flex-wrap: wrap;
 }
-.company_signup_form_logo input[type=file]{
-    width: unset;
+.apply_form_detailP_CV_choose input[type=file]{
+    width: 100px;
     border: none;
-    width: 35%;
-    min-width: 150px;
+    /* min-width: 90px; */
     border-radius: unset;
     outline: none;
     padding: unset;
     margin: 5px 10px 10px 0px;
     font-size: 0px;
-    
 }
-.company_signup_form_logo input[type=file]::-webkit-file-upload-button{
+.apply_form_detailP_CV_choose input[type=file]::-webkit-file-upload-button{
     visibility: hidden;
 }
-.company_signup_form_logo input[type=file]::before{
-    content: 'Logo yüklə';
+.apply_form_detailP_CV_choose input[type=file]::before{
+    content: 'CV yüklə';
     display: inline-block;
     background: var(--secondary-color);
     color: var(--primary-color);
     border-radius: 3px;    
-    padding: 10px 30px;
+    padding: 5px 10px;
     outline: none;
     white-space: nowrap;
     -webkit-user-select: none;
@@ -50,8 +151,53 @@
     font-weight: 700;
     font-size: 16px;
 }
-.company_signup_logo_name{
+.apply_form_detailP_CV_choose_name{
     font-size: 13px;
     color: #383838;
     text-decoration: underline;
+}
+.apply_form_detail_page_apply_btn{
+    width: 80%;
+    margin: 20px auto 0px;
+    display: block;
+    background-color: var(--submit-btn-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 10px;
+    /* opacity: 0.5; */
+    text-align: center;
+    padding: 5px 30px;
+    font-size: 17px;
+    font-weight: 500;
+}
+.apply_form_detail_page_apply_btn_ready{
+    opacity: 1;
+    background-color: var(--secondary-color);
+}
+@media (width <= 400px){
+    .apply_form_detail_page_close_btn svg{
+        font-size: 20px;
+    }
+    .apply_form_detail_page_head_text{
+        font-size: 18px;
+    }
+    .apply_form_detail_page_body{
+        padding: 10px;
+    }
+    .apply_form_check_text{
+        font-size: 15px;
+    }
+    .apply_form_checkbox{
+        width: 20px;
+        height: 20px;
+    }
+    .apply_form_checkbox_checkmark::after{
+        top: 0px;
+        left: 5px;
+        width: 5px;
+        height: 10px;
+    }
+    .apply_form_detail_page_apply_btn{
+        width: 100%;
+    }
 }
