design errors have been solved!

--- a/src/components/login_form/login_form.css
+++ b/src/components/login_form/login_form.css
@@ -8,7 +8,7 @@
 /* login form container */
 .login_Form{
     width: 100%;
-    height: auto;
+    /* height: auto; */
     position: relative;
     /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
