--- a/src/components/forgot_password_form/forgot_password_form.css
+++ b/src/components/forgot_password_form/forgot_password_form.css
@@ -24,10 +24,10 @@
 /* forgot password form container */
 .forgot_password_form_container{
     width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 10;
-    top: 0px;
+    /* height: 100%; */
+    position: relative;
+    /* z-index: 10;
+    top: 0px; */
     background-color: var(--primary-color);
     /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
