--- a/src/components/update_password_form/update_password_form.css
+++ b/src/components/update_password_form/update_password_form.css
@@ -24,9 +24,9 @@
 .update_password_form_container{
     width: 100%;
     /* height: 100%; */
-    position: absolute;
-    z-index: 12;
-    top: 0px;
+    position: relative;
+    /* z-index: 12;
+    top: 0px; */
     background-color: var(--primary-color);
     /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
