--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -9,6 +9,7 @@
     width: 80%;
     max-width: 400px;
     margin: 50px auto 0px;
+    position: relative;
 }
 @media (width <= 450px){
     .login_page_form_container{
