--- a/src/components/sendOtpForm/sendOtpForm.css
+++ b/src/components/sendOtpForm/sendOtpForm.css
@@ -21,6 +21,16 @@
         right: -60%;
     }
 }
+.otp_form_and_checking{
+    width: 100%;
+}
+.error_found_text{
+    width: 100%;
+    height: 50vh;
+    text-align: center;
+    font-size: 20px;
+    padding: 100px 0px;
+}
 /* otp form */
 .send_top_form_container{
     width: 100%;
