--- a/src/components/login_form/login_form.css
+++ b/src/components/login_form/login_form.css
@@ -98,6 +98,10 @@
     text-align: center;
     user-select: none;
     cursor: pointer;
+    opacity: 0.5;
+}
+.login_form_submit_btn_ready{
+    opacity: 1;
 }
 .login_form_link_to_signUp_container{
     margin: 50px auto 0px;
